🔧Fix font scaling when clicked/hover on mobile

--- a/carmods/style.css
+++ b/carmods/style.css
@@ -131,7 +131,7 @@ form {
   background-color: #4e5c69;
   text-decoration: none;
   color: #00f8b9;
-  display: inline-block;
+  display: inline;
 }
 
 
